--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.21.2",
+    "react-toastify": "^10.0.3",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
