--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
     "@mui/styled-engine-sc": "6.0.0-alpha.12",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "react": "^17.0.0 || ^18.0.0",
     "react-bootstrap": "^2.10.0",
