--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.21.2",
     "react-toastify": "^10.0.3",
+    "react-webcam": "^7.2.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
